This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2023-01-09:

- Fixed a bug causing incorrect greedy ${.sh.match} results when matching
  the pattern [^]] in a non-ASCII locale.

- Fixed a crash on initialisation that occurred if ksh was launched from a
  parent process with a very high or very low open files limit (ulimit -n).

2023-01-08:

- Fixed a completion bug in vi mode in multibyte character locales, in which
  one or more invalid characters were output at the end of the completion if
  the cursor was on a "wide" character (or if the last character of the word
  is wide and the cursor is in the immediately-following position).

- Fixed a bug in vi and emacs in which using = or * completion from within
  a word failed to replace the word; any trailing characters were printed
  at the end of the completion. (Bolsky and Korn, pp. 105-106 and 114-115)

2022-10-22:

- Release 1.0.4.

2022-10-18:

- Fixed the expansion of out-of-range \n back references in the string part of
  ${parameter//pattern/string}. For example:  v=AB; echo "${v/@(A)B/\0:\1:\2}"
  now yields 'AB:A:' instead of 'AB:A:\2'.

- Fixed a corner case regression in the BUG_IFSGLOBS fix applied on 2022-07-28:
  unquoted $* was affected. The fix now properly applies only to quoted "$*".

2022-10-14:

- Fixed: the generic --version option was not recognised for the built-in
  commands ., bg, disown, fc, fg, hist, jobs, let, source, times, and ulimit.

- Fixed a bug introduced by the 2022-10-07 BUG_BRACQUOT fix, which caused the
  fallback string in an expansion like ${emptyvar:-fallback string} to fail to
  split into fields correctly if the fallback string contained a !, ^ or -.

- Fixed a few different build errors on Haiku that prevented ksh from compiling