@@ -2,7 +2,7 @@
 *                                                                      *
 *               This software is part of the ast package               *
 *          Copyright (c) 1982-2012 AT&T Intellectual Property          *
-*          Copyright (c) 2020-2022 Contributors to ksh 93u+m           *
+*          Copyright (c) 2020-2023 Contributors to ksh 93u+m           *
 *                      and is licensed under the                       *
 *                 Eclipse Public License, Version 2.0                  *
 *                                                                      *
@@ -490,7 +490,7 @@ const char sh_optbuiltin[] =
 ;
 
 const char sh_optcd[] =
-"[-1c?\n@(#)$Id: cd (ksh 93u+m) 2021-12-05 $\n]"
+"[-1c?\n@(#)$Id: cd (ksh 93u+m) 2023-02-16 $\n]"
 "[--catalog?" SH_DICT "]"
 "[+NAME?cd - change working directory ]"
 "[+DESCRIPTION?\bcd\b changes the current working directory of the "
